--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ plugins {
     id 'org.ajoberstar.grgit' version '2.2.1'
     id 'org.sonarqube' version '3.0'
 }
+
 apply plugin: 'java'
 apply plugin: 'idea'
 apply plugin: 'application'
@@ -22,6 +23,7 @@ apply plugin: "com.github.johnrengelman.shadow"
 
 sonarqube {
     properties {
+        // property "sonar.host.url", "http://localhost:9000"
         property "sonar.host.url", "http://volted-monkey-sonarqube.ops:9000"
         property "sonar.projectKey", "org.sonarqube:cvs-svc-doc-gen"
         property "sonar.projectName", "Doc Generator Microservice"
@@ -43,6 +45,7 @@ jacocoTestReport {
         xml.enabled false
         csv.enabled false
         html.destination file("${buildDir}/reports/coverage")
+        // html.destination file("./reports/coverage")
     }
 }
 
