--- a/build.gradle
+++ b/build.gradle
@@ -23,10 +23,9 @@ apply plugin: "com.github.johnrengelman.shadow"
 
 sonarqube {
     properties {
-        // property "sonar.host.url", "http://localhost:9000"
-        property "sonar.host.url", "http://volted-monkey-sonarqube.ops:9000"
+        property "sonar.host.url", "http://localhost:9000"
         property "sonar.projectKey", "org.sonarqube:cvs-svc-doc-gen"
-        property "sonar.projectName", "Doc Generator Microservice"
+        property "sonar.projectName", "cvs-svc-doc-gen"
         property "sonar.projectVersion", "1.0"
         property "sonar.sourceEncoding", "UTF-8"
     }
