feat(cb2-6718): adjust ci.yml to use env

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,5 +12,5 @@ jobs:
       uses: snyk/actions/gradle-jdk11@master
       with:
         args: '--all-projects'
-      secrets:
+      env:
         SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
