feat(cb2-6718): added ignore check for agpl

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,3 +14,7 @@ jobs:
         args: '--all-projects'
       env:
         SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+
+ignore:
+  'snyk:lic:maven:com.itextpdf:itextpdf:AGPL-3.0'
+  reason: 'No fix available, blocks merging Snyk'
