--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "devDependencies": {
-    "husky": "^3.0.9"
+    "husky": "^3.0.9",
+    "sonar-scanner": "^3.1.0"
   },
   "scripts": {
-    "security-checks": "git secrets --scan && git log -p | scanrepo",
+    "security-checks": "git secrets --scan",
     "tools-setup": "echo 'Nothing to do'",
     "package": "echo 'Nothing to do'",
-    "sonar-scanner": "echo 'Not yet implemented'",
+    "sonar-scanner": "sonar-scanner",
     "test-i": "echo 'Not yet implemented'"
   },
   "husky": {
