--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "devDependencies": {
     "husky": "^3.0.9",
+    "npm-run-all": "^4.1.5",
     "sonar-scanner": "^3.1.0"
   },
   "scripts": {
@@ -10,7 +11,6 @@
     "sonar-scanner": "sonar-scanner",
     "test-i": "echo 'Not yet implemented'",
     "test": "npm-run-all test:unit:coverage"
-
   },
   "husky": {
     "hooks": {
