--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "tools-setup": "echo 'Nothing to do'",
     "package": "echo 'Nothing to do'",
     "sonar-scanner": "sonar-scanner",
-    "test-i": "echo 'Not yet implemented'",
-    "test": "npm-run-all test:unit:coverage"
+    "test-i": "echo 'Not yet implemented'"
   },
   "husky": {
     "hooks": {
