--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "devDependencies": {
     "husky": "^3.0.9",
     "npm-run-all": "^4.1.5",
-    "sonar-scanner": "^3.1.0"
+    "sonar-scanner": "^3.1.0",
+    "cross-env": "7.0.3"
   },
   "scripts": {
     "security-checks": "git secrets --scan",
