--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "husky": "^3.0.9",
     "npm-run-all": "^4.1.5",
-    "sonar-scanner": "^3.1.0",
-    "cross-env": "7.0.3"
+    "sonar-scanner": "^3.1.0"
   },
   "scripts": {
     "security-checks": "git secrets --scan",
