--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "sonar-scanner": "sonar-scanner",
     "test-i": "echo 'Not yet implemented'",
     "test": "npm-run-all test:unit:coverage",
-    "test:unit:coverage": "cross-env npm run test:unit -- --coverage"
+    "test:unit:coverage": "cross-env npm run test:unit -- --coverage",
+    "test:unit": "cross-env NODE_ENV=test API_VERSION=${npm_package_version} jest --runInBand"
   },
   "husky": {
     "hooks": {
