--- a/.github/workflows/pr-plan.yml
+++ b/.github/workflows/pr-plan.yml
@@ -31,7 +31,7 @@ jobs:
         run: npm ci
       - name: Run SonarQube scanner
         run: |
-         npm run test && \
+         npm run test:unit -- --coverage && \
          npm run sonar-scanner -- \
          -Dsonar.host.url=${{ env.SONARQUBE_GHA_URL }} \
          -Dsonar.token=${{ env.SONARQUBE_GHA_TOKEN }} \
