--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "package": "echo 'Nothing to do'",
     "sonar-scanner": "sonar-scanner",
     "test-i": "echo 'Not yet implemented'",
-    "test": "npm-run-all test:unit:coverage",
+    "test": "jest --coverage unit",
     "test:unit:coverage": "cross-env npm run test:unit -- --coverage",
     "test:unit": "cross-env NODE_ENV=test API_VERSION=${npm_package_version} jest --runInBand"
   },
