--- a/package.json
+++ b/package.json
@@ -1,26 +1,17 @@
 {
   "devDependencies": {
-    "cross-env": "^7.0.3",
-    "husky": "^3.0.9",
-    "npm-run-all": "^4.1.5",
-    "sonar-scanner": "^3.1.0"
+    "husky": "^3.0.9"
   },
   "scripts": {
-    "security-checks": "git secrets --scan",
+    "security-checks": "git secrets --scan && git log -p",
     "tools-setup": "echo 'Nothing to do'",
     "package": "echo 'Nothing to do'",
-    "sonar-scanner": "sonar-scanner",
-    "test-i": "echo 'Not yet implemented'",
-    "test": "jest --coverage unit",
-    "test:unit:coverage": "cross-env npm run test:unit -- --coverage",
-    "test:unit": "cross-env NODE_ENV=test API_VERSION=${npm_package_version} jest --runInBand"
+    "sonar-scanner": "echo 'Not yet implemented'",
+    "test-i": "echo 'Not yet implemented'"
   },
   "husky": {
     "hooks": {
       "pre-commit": "npm run security-checks"
     }
-  },
-  "dependencies": {
-    "jest": "^29.7.0"
   }
 }
