--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "devDependencies": {
-    "husky": "^3.0.9"
+    "husky": "^3.0.9",
+    "sonar-scanner": "^3.1.0"
   },
   "scripts": {
     "security-checks": "git secrets --scan && git log -p",
