--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "devDependencies": {
-    "husky": "^3.0.9",
-    "sonar-scanner": "^3.1.0"
+    "husky": "^3.0.9"
   },
   "scripts": {
-    "security-checks": "git secrets --scan && git log -p",
+    "security-checks": "git secrets --scan && git log -p | scanrepo",
     "tools-setup": "echo 'Nothing to do'",
     "package": "echo 'Nothing to do'",
     "sonar-scanner": "echo 'Not yet implemented'",
