--- a/.github/workflows/pr-plan.yaml
+++ b/.github/workflows/pr-plan.yaml
@@ -19,7 +19,7 @@ jobs:
         with:
           role-to-assume: ${{ secrets.CVS_MGMT_AWS_ROLE }}
           aws-region: ${{ secrets.DVSA_AWS_REGION }}
-          role-session-name: ''
+          role-session-name: 'cvs-svc-doc-gen'
       - uses: aws-actions/aws-secretsmanager-get-secrets@v1
         with:
           secret-ids: sonarqube-gha
