--- a/.github/workflows/pr-plan.yml
+++ b/.github/workflows/pr-plan.yml
@@ -2,9 +2,9 @@ name: PR-checks
 
 on:
  push:
-   branches: ['develop','feature/CB2-10780']
+   branches: ['develop']
  pull_request:
-   branches: ['develop','feature/CB2-10780']
+   branches: ['develop']
 
 jobs:
   scanner:
