--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "name": "doc-gen",
   "description": "",
   "team": "",
-  "documentation": "",
+  "documentation": "N/A",
   "language": "java",
   "terraform": false,
   "monorepo": false,
