--- a/manifest.json
+++ b/manifest.json
@@ -4,6 +4,7 @@
   "team": "",
   "documentation": "N/A",
   "language": "java",
+  "language_version": "11",
   "terraform": false,
   "monorepo": false,
   "dynamo_tables": []
